# nermes-core

./: INSTALL.zh-CN.md  LICENSE  README.md  README.zh-CN.md  cli.py  hermes_constants.py  hermes_logging.py  hermes_state.py  mcp_serve.py  nermes_platforms.json  pyproject.toml  run_agent.py  setup-hermes.sh  utils.py
acp_adapter/: entry.py  server.py  session.py
agent/: auxiliary_client.py  credential_sources.py  google_oauth.py  i18n.py  prompt_builder.py
cron/: __init__.py  jobs.py  scheduler.py
desktop/: README.md  index.html  package.json  pnpm-lock.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  UPSTREAM_SYNC_PLAN.md  faq.md  platforms.md  quickstart.md
gateway/: channel_directory.py  config.py  hooks.py  pairing.py  run.py  runtime_footer.py  status.py  sticker_cache.py
hermes_cli/: __init__.py  _parser.py  auth.py  backup.py  banner.py  bundles.py  commands.py  config.py  cron.py  curator.py  default_soul.py  doctor.py  env_loader.py  fallback_cmd.py  gateway.py  hooks.py  kanban.py  kanban_decompose.py  kanban_specify.py  logs.py  main.py  model_switch.py  plugins_cmd.py  secrets_cli.py  send_cmd.py  setup.py  skills_hub.py  skin_engine.py  status.py  tips.py  tools_config.py  uninstall.py  web_server.py
locales/: en.yaml  zh.yaml
professions/: README.md
scripts/: auto_sync_upstream.py  fix_upstream_brand.py  install.sh  scan_and_localize.py  scan_english_strings.py  sync_to_runtime.sh
tools/: finance_knowledge_maintain.py  finance_knowledge_search.py  mcp_oauth.py  mcp_tool.py  (+6 more)
(+100 files in other folders)
